--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,6 @@
 Flask==2.0.3
 Flask-Cors==4.0.1
 SQLAlchemy==1.4.52
+Flask-Migrate==3.1.0        
+Flask-WTF==1.0.0            
+Flask-Login==0.5.0          
